Added DataService and Organizers component with working data loading

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,7 @@
 <h1 class="text-center">
   Welcome to the Home component!
 </h1>
+
+<div class="text-center">
+  <a href="#" routerLink="organizers" class="button">Organizers</a>
+</div>
