Added filterable sales feed

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
-<h1 class="text-center">
+<h1 class="text-center animated fadeIn">
   Welcome to the Stager Ticket Sales Visualizer
 </h1>
 
-<div class="row mt-5 mb-4">
+<div class="row mt-5 mb-4 animated fadeIn">
   <div class="col-mg-6 m-auto">
     <div class="card text-center">
         <div class="card-body">
@@ -21,6 +21,6 @@
   </div>
 </div>
 
-<p class="text-center">
+<p class="text-center animtated fadeIn">
   Like I said, there is nothing much to see here. To see some actual stuff, go to <a href="#" routerLink="/organizers">Organizers</a> or <a href="#" routerLink="/sales">Sales</a>.
 </p>
