--- a/src/app/components/sales/sales.component.html
+++ b/src/app/components/sales/sales.component.html
@@ -1,4 +1,19 @@
 <select #selectedOrganizer>
+    <option value="">Any</option>
   <option *ngFor="let organizer of organizers" [value]="organizer.id">{{ organizer.name }}</option>
 </select>
-<button (click)="sortSales(selectedOrganizer.value)">Submit</button>
+<select #selectedYear>
+    <option value="">Any</option>
+    <option value="2013">2013</option>
+    <option value="2014">2014</option>
+    <option value="2015">2015</option>
+    <option value="2016">2016</option>
+    <option value="2017">2017</option>
+</select>
+<select #selectedWeek>
+    <option value="">Any</option>
+    <option *ngFor="let week of weeks; let index = index" [value]="index">Week {{ index }}</option>
+</select>
+<button (click)="sortSales(selectedOrganizer.value, selectedYear.value, selectedWeek.value)">Submit</button>
+
+{{ sortedSales }}
