--- a/src/app/components/sales/sales.component.html
+++ b/src/app/components/sales/sales.component.html
@@ -2,7 +2,8 @@
 
 <div class="row">
     <div class="col-md-6">
-        
+        <h1 class="mb-3 text-center">Search event sales</h1>
+
         <div class="form-group">
             <label for="organizers">Select organizer:</label>
             <select class="form-control" id="organizers" #selectedOrganizer>
@@ -33,6 +34,13 @@
  
         <button class = "btn btn-stager"(click)="sortSales(selectedOrganizer.value, selectedYear.value, selectedWeek.value)">Show event sales</button>
     </div>
+
+    <div class="col-md-6">
+        <h1 class="text-center mb-3">Statistics</h1>
+        <div *ngIf="!statistics" class="text-center">Hey, there's nothing to see here!</div>
+        <div *ngIf="statistics" class="text-center">Hey, there's something to see here!</div>
+    </div>
+
 </div>
 <br /> <br />
 
