--- a/src/app/components/sales/sales.component.html
+++ b/src/app/components/sales/sales.component.html
@@ -32,24 +32,29 @@
             </select>
         </div>
  
-        <button class = "btn btn-stager"(click)="sortSales(selectedOrganizer.value, selectedYear.value, selectedWeek.value)">Show event sales</button>
+        <button class="btn btn-stager mb-5"(click)="sortSales(selectedOrganizer.value, selectedYear.value, selectedWeek.value)">Show event sales</button>
     </div>
 
     <div class="col-md-6">
         <h1 class="text-center mb-3">Statistics</h1>
-        <div *ngIf="!statistics" class="text-center">Hey, there's nothing to see here!</div>
-        <div *ngIf="statistics" class="text-center">Hey, there's something to see here!</div>
+        <div *ngIf="!statistics" class="text-center mt-5">Hey, there's nothing to see here!</div>
+        <div *ngIf="statistics" class="text-center">
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" [style.width]="ticketsPercentage+'%'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span *ngIf="ticketsPercentage != 0">{{ ticketsPercentage }}%</span></div>
+            </div>
+            <h1 class="mt-3">{{ ticketsSold }} <span class="tickets-expected">/ {{ ticketsExpected }}</span></h1>
+        </div>
     </div>
-
 </div>
 <br /> <br />
 
-<h1 *ngIf="sortedSales" class="text-center mb-5 animated fadeIn">Events</h1>
+<h1 *ngIf="sortedSales" class="text-center mb-5 animated fadeIn">Events (per week)</h1>
 <div class="row animated fadeIn">
     <div *ngFor="let sortedSale of sortedSales" class="col-md-4 mb-3">
         <div class="card animated fadeIn">
             <div class="card-body">
-                <h4 class="card-title">Organization ID: {{ sortedSale.organization }}</h4>
+                <h4 class="card-title">Name: {{ organizers[sortedSale.organization-1].name }}</h4>
+                <div class="card-text">Organization ID: {{ sortedSale.organization }}</div>
                 <div class="card-text">Year: {{ sortedSale.year }}</div>
                 <div class="card-text">Week: {{ sortedSale.week }}</div>
                 <div class="card-text"><b>Tickets: {{ sortedSale.tickets }}</b></div>
