--- a/src/app/components/sales/sales.component.html
+++ b/src/app/components/sales/sales.component.html
@@ -37,8 +37,8 @@
 
     <div class="col-md-6">
         <h1 class="text-center mb-3">Statistics</h1>
-        <div *ngIf="!statistics" class="text-center mt-5">Hey, there's nothing to see here!</div>
-        <div *ngIf="statistics" class="text-center">
+        <div *ngIf="!statistics" class="text-center mt-5 animated fadeIn">Hey, there's nothing to see here!</div>
+        <div *ngIf="statistics" class="text-center animated fadeIn">
             <div class="progress">
                 <div class="progress-bar" role="progressbar" [style.width]="ticketsPercentage+'%'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span *ngIf="ticketsPercentage != 0">{{ ticketsPercentage }}%</span></div>
             </div>
