Changed home content

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
 
 <div class="row mt-5 mb-4 animated fadeIn">
   <div class="col-mg-6 m-auto">
-    <div class="card text-center">
+    <!-- <div class="card text-center">
         <div class="card-body">
           <h4 class="card-title">Statistics</h4>
           <p class="card-text">Below you can see some basic total statistics. But besides that there is nothing much to see here...</p>
@@ -17,7 +17,9 @@
               <div *ngIf="!salesTotal > totalTicketsExpected"><b>Total needed sales reached</b></div>
             </li>
         </ul>
-      </div>
+      </div> -->
+      <h3 class="text-center">There is not much to see here, to see some real magic, click on a link in the menu :)<br />I don't like this page so empty, so here's some dummy content!</h3>
+      <div class='embed-container mt-4'><iframe src='https://www.youtube.com/embed/dQw4w9WgXcQ' frameborder='0' allowfullscreen></iframe></div>
   </div>
 </div>
 
