Added graphs component functionalities

--- a/src/app/components/sales/sales.component.html
+++ b/src/app/components/sales/sales.component.html
@@ -44,7 +44,7 @@
             </div>
             <h1 class="mt-3">{{ ticketsSold }} <span class="tickets-expected">/ {{ ticketsExpected }}</span></h1>
         </div>
-        <p class="mt-4">That's all fun and games, but just give me some <a href="#" routerLink="graphs">nice graphs</a>.</p>
+        <p class="mt-4 text-center">That's all fun and games, but just give me some <a href="#" routerLink="/graphs">nice graphs</a>.</p>
     </div>
 </div>
 <br /> <br />
