--- a/src/app/components/graphs/graphs.component.html
+++ b/src/app/components/graphs/graphs.component.html
@@ -1,44 +1,54 @@
 <div class="container"> 
-  <h1 class="text-center mb-3">Graphs</h1>
+  <div class="row">
+    <div class="col-md-3">
+      <h1 class="text-center mb-3">Graphs</h1>
 
-  <div class="alert alert-danger animated fadeIn" *ngFor="let inputError of inputErrors">{{ inputError }}</div>
+      <div class="alert alert-danger animated fadeIn" *ngFor="let inputError of inputErrors">{{ inputError }}</div>
 
-  <div class="form-group col-md-4 m-auto">
-    <label for="year">Select year:</label>
-    <select class="form-control" id="year" #selectedYear>
-        <option value="">Any</option>
-        <option value="2013">2013</option>
-        <option value="2014">2014</option>
-        <option value="2015">2015</option>
-        <option value="2016">2016</option>
-        <option value="2017">2017</option>
-    </select>
-  </div>
-
-  <div class="form-group col-md-4 m-auto">
-      <label for="week">Select week:</label>
-      <select class="form-control" id="week" #selectedWeek>
-          <option value="">Any</option>
-          <option *ngFor="let week of weeks; let index = index" [value]="index">Week {{ index }}</option>
-      </select>
-
-      <button class="btn btn-stager mb-5 mt-4" (click)="getGraphs(selectedYear.value, selectedWeek.value)">Show event sales</button>
-  </div>
-  
-  
-  <div *ngIf="!graphData" class="text-center mt-5 animated fadeIn">Hey, there's nothing to see here!</div>
-  
-  
-  <div *ngIf="graphData" class="text-center animated fadeIn">
-    <div *ngFor="let data of graphData">
-      <h3>Organizer: {{ data.organizer }}</h3>
-      <div class="progress">
-          <div class="progress-bar" role="progressbar" [style.width]="data.percentage+'%'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-            <span *ngIf="ticketsPercentage != 0">{{ data.percentage }}%</span>
-          </div>
+      <div class="form-group m-auto">
+        <label for="year">Select year:</label>
+        <select class="form-control" id="year" #selectedYear>
+            <option value="">Any</option>
+            <option value="2013">2013</option>
+            <option value="2014">2014</option>
+            <option value="2015">2015</option>
+            <option value="2016">2016</option>
+            <option value="2017" selected="selected">2017</option>
+        </select>
       </div>
-      <h1 class="mt-3">{{ data.sales }} <span class="tickets-expected">/ {{ data.expectedSales }}</span></h1>
+
+      <div class="form-group m-auto">
+          <label for="week">Select week:</label>
+          <select class="form-control" id="week" #selectedWeek>
+              <option value="">Any</option>
+              <option *ngFor="let week of weeks; let index = index" [value]="index">Week {{ index }}</option>
+          </select>
+
+          <button class="btn btn-stager mb-5 mt-4" (click)="getGraphs(selectedYear.value, selectedWeek.value)">Show event sales</button>
+      </div>
+    </div>
+    
+    <div class="col-md-9">
+      <div *ngIf="!graphData" class="text-center mt-5 animated fadeIn">Hey, there's nothing to see here!</div>
+      
+      
+      <div *ngIf="graphData" class="text-center animated fadeIn">
+        <div class="row">
+          <div *ngFor="let data of graphData" class="col-md-4 mb-3">
+            <div class="card p-3">
+              <h2 class="card-title">Organizer: {{ data.organizer }}</h2>
+              <div class="card-body">
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" [style.width]="data.percentage+'%'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                      <span *ngIf="ticketsPercentage != 0">{{ data.percentage }}%</span>
+                    </div>
+                </div>
+                <h1 class="mt-3">{{ data.sales }} <span class="tickets-expected">/ {{ data.expectedSales }}</span></h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
 </div>
