--- a/src/app/components/sales/sales.component.html
+++ b/src/app/components/sales/sales.component.html
@@ -39,12 +39,12 @@
         <h1 class="text-center mb-3">Statistics</h1>
         <div *ngIf="!statistics" class="text-center mt-5 animated fadeIn">Hey, there's nothing to see here!</div>
         <div *ngIf="statistics" class="text-center animated fadeIn">
-            <div class="progress">
+            <div class="progress sales-progress">
                 <div class="progress-bar" role="progressbar" [style.width]="ticketsPercentage+'%'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span *ngIf="ticketsPercentage != 0">{{ ticketsPercentage }}%</span></div>
             </div>
             <h1 class="mt-3">{{ ticketsSold }} <span class="tickets-expected">/ {{ ticketsExpected }}</span></h1>
         </div>
-        <p class="mt-4 text-center">That's all fun and games, but just give me some <a href="#" routerLink="/graphs">nice graphs</a>.</p>
+        <p class="mt-4 text-center">That's all fun and games, but just give me some <a href="#" routerLink="/graphs">nice graphs</a> for <em>all</em> organizers together!</p>
     </div>
 </div>
 <br /> <br />
