--- a/src/assets/custom/scss/_bootstrap-overwrite.scss
+++ b/src/assets/custom/scss/_bootstrap-overwrite.scss
@@ -5,7 +5,7 @@
     background-color: $stager-aubergine !important;
 }
 
-.progress {
+.sales-progress {
     line-height: 30px !important;
     margin-top: 3.2rem !important;
 }
